# demo1

./: .env  .gitignore  Cargo.toml  README.md  deploy.sh  dfx.json  package-lock.json  package.json  webpack.config.js
src/demo1_backend/: Cargo.toml
src/demo1_backend/src/: lib.rs
src/demo1_frontend/src/: index.html  index.js
